tests/cases/should_fail/literals/double_colon_in_map_literal.hash
// run=fail, stage=parse

k := map!{ 1::2 };
