tests/cases/should_fail/literals/double_colon_in_map_literal.stderr
error: expected a name here
 --> $DIR/double_colon_in_map_literal.hash:1:15
1 |   k := map!{ 1::2 };
  |                 ^ here
